<resources>
    <string name="app_name">Project</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="ButtonText1">Start Chat</string>
    <string name="title_activity_login">Login activity</string>
    <string name="text_label">Login</string>
    <string name="login_message">Enter your login</string>
    <string name="login_name">Login name</string>
    <string name="prompt_email"></string>
    <string name="password">Enter your password</string>
    <string name="example_button1">Button 1</string>
    <string name="example_button2">Button 2</string>
    <string name="enable_something">Enable Something</string>
    <string name="Send">Send</string>
    <string name="action_sign_in">Sign in</string>
    <string name="button_show_icon">Show Icon</string>
    <string name="dialog_message">Do you want to finish your activity?</string>
    <string name="dialog_title">Alert Dialog</string>
    <string name="saved_email"></string>
    <string name="dialog1">Switch is On</string>
    <string name="title_activity_chat_window">chatWindow</string>
    <string name="simple_list_item_1"></string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="happy_message">I am happy</string>
    <string name="car_message">I like my car</string>
    <string name="weather">Weather</string>
    <string name="normProgBar"></string>
    <string name="weatherButton">Check weather</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="ottawa"> Ottawa, ON </string>
    <string name="temperature"> temperature </string>
    <string name="temperature_min">minimum temperature </string>
    <string name="temperature_max">maximum temperature </string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="about_message">Project is created by Karen Berkhoutpluzak, Elena Sveshnikova and Nadja Chubarev </string>
    <string name="new_message">Do you need help?</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbarButtonText">Test Toolbar</string>
    <string name="title_activity_dialog_custom">dialog_custom</string>
    <string name="change_message">yes</string>
    <string name="back">no</string>
    <string name="ButtonText2">Start Project</string>
    <string name="title_activity_project">Project</string>
    <string name="Add">Add</string>
    <string name="project"> Welcome to the project "SWEAR NOT" </string>
    <string name="title_activity_project_window">ProjectWindow</string>
    <string name="collector"> You can create a list of words </string>

</resources>
