<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.elena.lab1.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_width="194dp"
        android:layout_height="133dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/happy">

    </ImageView>

    <TextView
        android:text="@string/project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/project_textView"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editText" />
    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_message"
        android:id="@+id/textView2"
        android:layout_above="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prompt_email"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp" />


</RelativeLayout>
