<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.elena.lab1.WeatherForecast"
    tools:showIn="@layout/activity_weather_forecast">

    <TextView
        android:text="@string/ottawa"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ottawa_textView"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:textSize="@dimen/abc_action_button_min_width_overflow_material" />
    <ImageView
        android:id="@+id/weather_imageView"

        android:layout_width="200dp"
        android:layout_height="200dp"
         android:layout_below="@+id/ottawa_textView"/>

    <TextView
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temp_textView"
        android:layout_below="@+id/weather_imageView"

        android:textColor="@color/abc_btn_colored_borderless_text_material"
        android:textStyle="normal|bold"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <TextView
        android:text="@string/temperature_min"
        android:id="@+id/temp_min_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_textView"

        android:textStyle="normal|bold|italic"
        android:textSize="@dimen/abc_dialog_padding_top_material"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/temperature_max"
        android:id="@+id/temp_max_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_min_textView"

        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold|italic"
        android:textSize="@dimen/abc_dialog_padding_top_material" />

    <ProgressBar
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_max_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="28dp"
        android:id="@+id/normProgBar"

        android:visibility="invisible"
        />
</RelativeLayout>
